Fri Oct 18 15:44:19 2002  Priyanka Gontla  <pgontla@ociweb.com>

	* THANKS:
	  Added Christian Barheine <cbarheine@sympatec.com> to the hall
	  of fame.

Fri Oct 18 19:37:20 GMT 2002  Craig Rodrigues  <crodrigu@bbn.com>
	
	* ace/config-macosx.h: Define ACE_HAS_NONSTATIC_OBJECT_MANAGER
	  for gperf.

Fri Oct 18 14:52:37 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/Reactor_Logging_Server.cpp:
        * examples/C++NPv2/Select_Reactor_Logging_Server.cpp:
        * examples/C++NPv2/TP_Reactor_Logging_Server.cpp:
        * examples/C++NPv2/display_logfile.cpp: Added necessary explicit
          template instantiations.

Fri Oct 18 13:21:05 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* tests/Timer_Queue_Test.cpp,
	* examples/Reactor/Misc/test_timer_queue.cpp:
	  Fixed these tests so that it passes dynamically allocated memory
 	  rather that values via the "act" parameter to
 	  ACE_Timer_Queue::schedule().  This ensures the test will work
 	  properly on strange OS platforms, such as Win64 where pointers
 	  and longs/ints are different sizes.  Thanks to Cristian
 	  Ungureanu <cristian.ungureanu@amdocs.com> for motivating this.

Fri Oct 18 17:20:02 UTC 2002  Don Hinton  <dhinton@iee.org>

	* ace/SOCK_Dgram_Mcast.{h,cpp}:

	  Factored out common code to an open_i() method that open()
	  can call at this level and in inherited classes.

	* ace/QoS/SOCK_Dgram_Mcast_QoS.{h.cpp}:

	  Modified ctor to take same default param as base class and
	  invoke the base class ctor.

	  Removed duplicate code in open() and have it call base::open_i()
	  after opening the socket with QoS. Changed 1st parameter from
	  ACE_Addr to ACE_INET_Addr to match base classes.

	  Removed duplicate code from subscribe by having it call base
	  class methods.

Fri Oct 18 11:51:44 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

        * bin/PerlACE/Run_Test.pm: Created a new variable
          $PerlACE::svcconf_ext which defines the canonical