@@ -1,3 +1,9 @@
+Fri Oct 18 21:01:25 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
+
+	* examples/C++NPv1/Makefile: Fix comment.
+	* examples/C++NPv1/Makefile: Replace with recursive Makefile which
+	  does not use for loops.
+
 Fri Oct 18 15:44:19 2002  Priyanka Gontla  <pgontla@ociweb.com>
 
 	* THANKS:
